# puffin_brain

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
agent-turtle/: command_publisher_node.py  ollama_publisher_node.py
launch/: README.md  puffin_brain_complete.launch.py  ros_service_example.launch  whisper_ollama_command.launch
log/: latest_build
msg/: tutwist.msg
puffin_brain/: command_publisher_node.py  ollama_publisher_node.py  whisper_listener_node.py
scripts/: command_publisher_node.py  mock_ollama_publisher.py  ollama_publisher_node.py  publisher_node.py  service_client_node.py  service_server_node.py  subscriber_node.py  whisper_listener_class_node.py  whisper_listener_node.py
src/: publisher.py  subscriber.py
