<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puffin_brain</name>
  <version>0.0.0</version>
  <description>The puffin_brain ROS 2 package</description>
  <maintainer email="jetson@todo.todo">evas</maintainer>
  <license>Apache-2.0</license> 
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_python</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!--member_of_group>rosidl_interface_packages</member_of_group-->

  <depend>rclpy</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend> 
  <depend>puffin_msgs_interface</depend>

  <depend>sensor_msgs</depend> 
  <depend>nav_msgs</depend> 
  <depend>builtin_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>